# beetus

./: README.md  beetus.pyxapp  godot_generator.py  pyproject.toml
.zed/: settings.json  tasks.json
beetus/: client.py  game.py  generate.py  main.py  params.py  pieces.py
beetus/games/: snake.py
beetus_godot_project/: project.godot
beetus_godot_project/globals/: GameManager.gd
beetus_godot_project/levels/: Clinic.tscn
beetus_godot_project/ui/: Dashboard.tscn  WaveRenderer.gd
minecraft_res/: beetus-entity.bbmodel  beetus-entity.json  beetus.json  beetus_pack.mcaddon
models/: beetus-entity.bbmodel  beetus-entity.json
pfun_cma_model_client/: README.md  git_push.sh  pyproject.toml  setup.py
pfun_cma_model_client/.openapi-generator/: FILES
pfun_cma_model_client/docs/: BodyFitModelToDataModelFitPost.md  CMAModelParams.md  Config.md  DataApi.md  DefaultApi.md  DemoApi.md  DexcomApi.md  LlmApi.md  Params.md  ParamsApi.md  T01.md  T11.md
pfun_cma_model_client/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
pfun_cma_model_client/test/: test_body_fit_model_to_data_model_fit_post.py  test_cma_model_params.py  test_config.py  test_data.py  test_data_api.py  test_default_api.py  test_demo_api.py  test_dexcom_api.py  test_http_validation_error.py  test_llm_api.py  test_params.py  test_params_api.py  test_seed.py  test_t0.py  test_t01.py  test_t1.py  test_t11.py  test_validation_error.py  test_validation_error_loc_inner.py
pyxel_examples/assets/: sample.pyxres
scripts/: package-game.sh  play-game.sh
(+23 files in other folders)
